// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisResult component matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: inherit;
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "You're doing great!",
        }
      }
    />
  </p>
  <div
    className="c4"
  >
    <div
      className="yst-root"
    >
      <div
        className="yst-relative yst-inline-flex"
      >
        <button
          aria-label="SEOResult"
          aria-pressed={true}
          className="yst-button yst-button--primary yst-button--small yst-px-2 yst-rounded-md yst-shadow-none yst-border-0 focus:yst-z-10"
          disabled={false}
          id="Result button"
          onClick={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="yst-w-4 yst-h-4"
            fill="none"
            stroke="currentColor"
            strokeWidth={2}
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`the AnalysisResult component with a activated premium matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: inherit;
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      className="yoast-badge yoast-beta-badge"
    >
      Beta
    </span>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "This is beta!",
        }
      }
    />
  </p>
  <div
    className="c4"
  >
    <div
      className="yst-root"
    >
      <div
        className="yst-relative yst-inline-flex"
      >
        <button
          aria-label="SEOResultEdit"
          className="yst-button yst-button--secondary yst-button--small yst-px-2 yst-rounded-md yst-shadow-none yst-border-0"
          disabled={false}
          id="Result button edit"
          onClick={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="yst-w-4 yst-h-4"
            fill="none"
            stroke="currentColor"
            strokeWidth={2}
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`the AnalysisResult component with a beta badge label matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: inherit;
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      className="yoast-badge yoast-beta-badge"
    >
      Beta
    </span>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "This is beta!",
        }
      }
    />
  </p>
  <div
    className="c4"
  />
</li>
`;

exports[`the AnalysisResult component with disabled buttons matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: inherit;
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "You're doing great!",
        }
      }
    />
  </p>
  <div
    className="c4"
  >
    <div
      className="yst-root"
    >
      <div
        className="yst-relative yst-inline-flex"
      >
        <button
          aria-label="SEOResult"
          aria-pressed={true}
          className="yst-button yst-button--primary yst-button--small yst-button--disabled yst-px-2 yst-rounded-md yst-shadow-none yst-border-0 focus:yst-z-10"
          disabled={true}
          id="Result button"
          onClick={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="yst-w-4 yst-h-4"
            fill="none"
            stroke="currentColor"
            strokeWidth={2}
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`the AnalysisResult component with hidden buttons matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: inherit;
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "You're doing great!",
        }
      }
    />
  </p>
  <div
    className="c4"
  />
</li>
`;

exports[`the AnalysisResult component with html in the text matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: inherit;
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "You're doing <b>great!</b>",
        }
      }
    />
  </p>
  <div
    className="c4"
  >
    <div
      className="yst-root"
    >
      <div
        className="yst-relative yst-inline-flex"
      >
        <button
          aria-label="SEOResult"
          aria-pressed={true}
          className="yst-button yst-button--primary yst-button--small yst-px-2 yst-rounded-md yst-shadow-none yst-border-0 focus:yst-z-10"
          disabled={false}
          id="Result button"
          onClick={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="yst-w-4 yst-h-4"
            fill="none"
            stroke="currentColor"
            strokeWidth={2}
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</li>
`;

exports[`the AnalysisResult component with suppressed text matches the snapshot 1`] = `
.c1 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  display: grid;
  grid-template-rows: 1fr;
  max-width: 32px;
  gap: 6px;
}

.c0 {
  min-height: 24px;
  margin-bottom: 12px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  gap: 12px;
}

.c2 {
  margin: 3px 0 0 0;
}

.c3 {
  margin: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: rgba(30,30,30,0.5);
}

<li
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 yoast-svg-icon yoast-svg-icon-circle c2"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c3"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "You're doing great!",
        }
      }
    />
  </p>
  <div
    className="c4"
  />
</li>
`;
